[gd_scene load_steps=23 format=3 uid="uid://ije684mttpq6"]

[ext_resource type="PackedScene" uid="uid://d4frqd6ime8es" path="res://house_but_cooler.tscn" id="1_tq7og"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_uvn8n"]
[ext_resource type="Shader" path="res://BaseShader.gdshader" id="2_2mvul"]
[ext_resource type="FontFile" uid="uid://cuh5j7mcwt06p" path="res://Fonts/ShareTechMono-Regular.ttf" id="2_4qyge"]
[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain.gd" id="3_h6o1n"]
[ext_resource type="Resource" path="res://TerrainData/data.hterrain" id="4_ps8g7"]
[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain_texture_set.gd" id="5_0ec0u"]
[ext_resource type="AudioStream" uid="uid://c12y0nctxyjdu" path="res://Sounds/forest.ogg" id="7_rrrtr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1d3rj"]
bg_color = Color(0.239216, 0.439216, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ngqj2"]
bg_color = Color(0.141176, 0.388235, 0.168627, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sk2a3"]
border_width_left = 2
border_width_top = 2
border_color = Color(0.0313726, 0.490196, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_color = Color(0, 0, 0, 0.937255)
shadow_size = 5
shadow_offset = Vector2(1.24, -0.91)

[sub_resource type="Theme" id="Theme_5q0my"]
Button/colors/font_color = Color(0.196078, 0.458824, 0.109804, 1)
Button/colors/icon_hover_color = Color(0.0627451, 0.439216, 0, 1)
Button/colors/icon_normal_color = Color(0.164706, 0.341176, 0, 1)
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("2_4qyge")
Button/styles/focus = SubResource("StyleBoxFlat_1d3rj")
Button/styles/hover = SubResource("StyleBoxFlat_ngqj2")
Button/styles/normal = SubResource("StyleBoxFlat_sk2a3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bujda"]
bg_color = Color(0.517647, 0, 0.141176, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qdjy"]
border_width_left = 2
border_width_top = 2
border_color = Color(0.560784, 0, 0.113725, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.964706)
shadow_size = 6
shadow_offset = Vector2(2.315, 0.72)

[sub_resource type="Theme" id="Theme_i6bd2"]
Button/colors/font_color = Color(0.639216, 0, 0.129412, 1)
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("2_4qyge")
Button/styles/hover = SubResource("StyleBoxFlat_bujda")
Button/styles/normal = SubResource("StyleBoxFlat_0qdjy")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6f2l3"]
sky_top_color = Color(0.113725, 0.141176, 0.184314, 1)
sky_horizon_color = Color(0.329412, 0.337255, 0.34902, 1)
sky_curve = 0.047796
ground_curve = 0.0292818
sun_angle_max = 7.78
sun_curve = 0.974702

[sub_resource type="Sky" id="Sky_fr7xe"]
sky_material = SubResource("ProceduralSkyMaterial_6f2l3")
radiance_size = 2

[sub_resource type="Environment" id="Environment_a46g2"]
background_mode = 2
background_energy_multiplier = 0.7
sky = SubResource("Sky_fr7xe")
ambient_light_source = 3
reflected_light_source = 2
volumetric_fog_enabled = true
volumetric_fog_emission_energy = 0.0
volumetric_fog_anisotropy = -0.9
volumetric_fog_detail_spread = 2.07053
volumetric_fog_sky_affect = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xs73r"]
shader = ExtResource("2_2mvul")
shader_parameter/saturation = 0.75
shader_parameter/contrast = 0.9
shader_parameter/brightness = 0.8

[sub_resource type="Resource" id="Resource_g0wa2"]
script = ExtResource("5_0ec0u")
mode = 0
textures = [[], []]

[sub_resource type="Animation" id="Animation_dpk72"]
resource_name = "menu_animation"
length = 15.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 8.45037, 17.8527, 3, 1, 6.63353, 10.4108, 20.7298, 9, 1, -17.2221, 10.4108, 20.7298, 15, 1, 0, 8.45037, 17.8527)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 3, 1, -0.136387, 0.216981, 0.029242, 0.966159, 9, 1, -0.130828, -0.334409, -0.0483785, 0.932048, 15, 1, 0, 0, 0, 1)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjpxv"]
_data = {
"menu_animation": SubResource("Animation_dpk72")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_uvn8n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
process_priority = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -105.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 15

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
process_mode = 3
process_priority = 2
layout_mode = 2
theme = SubResource("Theme_5q0my")
text = "Play Game"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_i6bd2")
text = "Quit"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
process_mode = 3
layer = 0

[node name="House_but_cooler" parent="." instance=ExtResource("1_tq7og")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.971723, 3.14204, 4.23726)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_a46g2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.850903, 0.525323, 0, -0.525323, 0.850903, 0, 41.3486, 4.11904)
light_energy = 0.01
light_indirect_energy = 0.279
light_volumetric_fog_energy = 1.19
light_angular_distance = 32.73
sky_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_xs73r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="HTerrain" type="Node3D" parent="."]
script = ExtResource("3_h6o1n")
centered = true
_terrain_data = ExtResource("4_ps8g7")
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource("Resource_g0wa2")
render_layers = 1
cast_shadow = 1
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = null
shader_params/u_tile_reduction = null

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.943117, -0.0792672, 0.322872, 0.00903374, 0.976912, 0.213451, -0.332337, -0.198392, 0.922059, 5.08571, 9.95337, 20.0585)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wjpxv")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rrrtr")

[node name="Timer" type="Timer" parent="AudioStreamPlayer"]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.501961, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.65098)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_4qyge")
theme_override_font_sizes/font_size = 64
text = "The Blip
"

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="AudioStreamPlayer/Timer" to="." method="_on_timer_timeout"]
